--- a/style.css
+++ b/style.css
@@ -3,7 +3,8 @@ html {
   font-size: 20px;
 }
 p,
-li {
+li,
+label {
   font-family: "Reddit Sans", sans-serif;
 }
 body {
@@ -97,13 +98,39 @@ a {
 }
 .contact {
   background-color: #96e9c6;
-  display: flex;
-  flex-direction: column;
-  width: fit-content;
   padding: 2rem;
   border-radius: 8%;
   margin: auto;
   text-align: center;
+}
+
+/* this comes from w3 schools */
+/* Style inputs with type="text", select elements and textareas */
+input[type="text"],
+select,
+textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-bottom: 16px; /* Bottom margin */
+}
+
+/* Style the submit button with a specific background color etc */
+input[type="submit"] {
+  background-color: #6c22a6;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  width: 20%;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+input[type="submit"]:hover {
+  background-color: #6962ad;
 }
 
 @media (max-width: 1200px) {
@@ -172,5 +199,15 @@ a {
   .introduction img {
     height: 150px;
     margin: 1rem;
+  }
+}
+@media (min-width: 760px) {
+  form {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto auto auto;
+    gap: 0.5rem;
+  }
+  #button {
   }
 }
