--- a/style.css
+++ b/style.css
@@ -125,7 +125,6 @@ input[type="submit"] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-  width: 20%;
 }
 
 /* When moving the mouse over the submit button, add a darker green color */
@@ -210,4 +209,7 @@ input[type="submit"]:hover {
   }
   label{
     text-align: right;
+  }
+  input[type="submit"] {
+    width: 20%;
   }
