--- a/style.css
+++ b/style.css
@@ -1,196 +1,216 @@
-/*
-.ubuntu-sans-<uniquifier> {
-    font-family: "Ubuntu Sans", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: <weight>;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-  }
-*/
-/* algemeen */
-* {
-  font-family: "Ubuntu", sans-serif;
+
+html {
   font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 20px;
 }
-p {
+p,
+li,
+label {
   font-family: "Reddit Sans", sans-serif;
 }
-
 body {
-  background-color: #8644a2;
-  margin: 0;
-
+  margin: 0px;
+  background-color: #6962ad;
 }
-.memoriam {
-  background-color: lightgray;
-}
-
-h1 {
-  color: #8644a2;
-  text-align: center;
-}
-h2 {
-  color: #d862bc;
-  margin-top: 3rem;
-}
-h3 {
-  color: #e59be9;
-  margin-top: 2rem;
-}
-h4 {
-  color: #d862bc;
-}
-
-a {
-  text-decoration: none;
-  color: #8644a2;
-  font-family: "Reddit Sans", sans-serif;
-}
-
-footer {
-  background-color: #d862bc;
-  color: #ffebb2;
-  height: 100px;
-  font-family: "Reddit Sans", sans-serif;
-  text-align: center;
-  padding-top: 2rem;
-}
-
 main {
+  padding: 5rem;
   max-width: 1200px;
-  background-color: white;
-  padding: 2rem;
   margin: auto;
 }
-img {
-  width: 100%;
+h1 {
+  color: #6c22a6;
 }
-
-/* navbar*/
-nav {
-  background-color: #d862bc;
+h2 {
+  color: #6962ad;
 }
-nav a {
-  color: #ffebb2;
+h3 {
+  color: #83c0c1;
 }
-nav ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-}
-nav li{
-  float: left;
-}
-
-li a, .dropbtn {
-  display: inline-block;
-  text-align: center;
-  padding: 14px 16px;
-}
-nav li a:hover, .dropdown:hover .dropbtn {
-  background-color:#8644a2;
-}
-
-li.dropdown {
-  display: inline-block;
-}
-
-.dropdown-content {
-  display: none;
-  position: absolute;
-  background-color:#ffebb2;
-  min-width: 160px;
-  /*box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);*/
-  z-index: 1;
-}
-
-.dropdown-content a {
-  color:#8644a2;
-  padding: 12px 16px;
+a {
+  color: #6c22a6;
   text-decoration: none;
-  display: block;
-  text-align: left;
+}
+#logo1 {
+  position: absolute;
+  height: 100px;
+  margin-top: 60vh;
+  margin-left: 10%;
+}
+#logo2 {
+  position: absolute;
+  height: 150px;
+  right: 5%;
+}
+.introduction {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  align-items: center;
+  background-color: #96e9c6;
+}
+.introduction img {
+  height: 200px;
+  border-radius: 50%;
+  margin: 3rem;
+}
+.compartiment {
+  margin-bottom: 10rem;
+  background-color: white;
+  padding: 2rem;
+}
+.resumepart {
+  margin-bottom: 3rem;
+}
+.projects ul {
+  list-style-type: none;
+  padding: 0px;
 }
 
-.dropdown-content a:hover {background-color:#e59be9;}
-
-.dropdown:hover .dropdown-content {
-  display: block;
-}
-
-/* inhoud homepage */
-.info {
-  border: 2px solid #8644a2;
+.projects img {
+  width: 100%;
   border-radius: 8%;
-  padding: 4%;
-  margin-bottom: 2rem;
+}
+.project {
+  border: #6c22a6 solid;
+  border-radius: 8%;
+  padding: 2rem;
+}
+.projects ul {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 2rem;
 }
 
-.info img {
+.hobbies img {
+  width: 80%;
+  margin-top: 1rem;
+  justify-self: right;
   border-radius: 8%;
-  margin-bottom: 1rem;
 }
-/* huisdieren */
-.profiel {
+.hobbies {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  text-align: left;
-  gap: 2%;
-  width: 100%;
+  grid-template-rows: auto;
+}
+.hobbies h2 {
+  grid-column: span 2;
+}
+.contact {
+  background-color: #96e9c6;
+  padding: 2rem;
+  border-radius: 8%;
+  margin: auto;
+  text-align: center;
 }
 
-.profielfoto {
-  border-radius: 5%;
-  margin-bottom: 2rem;
+/* this comes from w3 schools */
+/* Style inputs with type="text", select elements and textareas */
+input[type="text"],
+select,
+textarea {
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-bottom: 16px; /* Bottom margin */
 }
 
-.fotos img {
-  width: 23%;
-}
-.fotos {
-  display: flex;
-  justify-content: space-between;
-  margin: 1rem 0px 2rem 0px;
-}
-.profiel p {
-  margin-top: 0px;
-}
-/* projecten */
-.project li {
-  font-family: "Reddit Sans", sans-serif;
+/* Style the submit button with a specific background color etc */
+input[type="submit"] {
+  background-color: #6c22a6;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
+/* When moving the mouse over the submit button, add a darker green color */
+input[type="submit"]:hover {
+  background-color: #6962ad;
+}
 
+@media (max-width: 1200px) {
+  .project {
+    padding: 1rem;
+  }
+}
+@media (max-width: 1000px) {
+  main {
+    padding: 3rem;
+  }
+}
+@media (max-width: 900px) {
+  main {
+    padding: 2rem;
+  }
+  .projects li {
+    font-size: 18px;
+  }
+  .projects ul {
+    gap: 1rem;
+  }
+}
 
-
-/* verschillende schermen */
-@media (max-width: 850px) {
-  .profiel {
+@media (max-width: 760px) {
+  .hobbies {
     display: flex;
     flex-direction: column;
   }
-  .fotos {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr 1fr;
-    gap: 2%;
-  }
-  .fotos img {
-    width: 100%;
-  }
-}
-/*Hier moet nog iets komen met de dropdownmenu (hamburger)*/
 
-@media (min-width: 850px) {
-  main {
-    width: 85%;
-    max-width: 1000px;
-  }
-  .home {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 3%;
+  .projects ul {
+    grid-template-columns: 1fr 1fr;
   }
 }
+
+@media (max-width: 600px) {
+  #logo1 {
+    height: 50px;
+  }
+  #logo2 {
+    height: 100px;
+  }
+  .introduction img {
+    margin: 1rem;
+  }
+  main {
+    padding: 3rem 0px;
+  }
+  .projects ul {
+    display: flex;
+    flex-direction: column;
+  }
+  .project {
+    margin-bottom: 4%;
+  }
+}
+
+@media (max-height: 500px) {
+  /* hier moet ik nog even naar kijken */
+  #logo1 {
+    height: 50px;
+  }
+  #logo2 {
+    height: 100px;
+  }
+  .introduction img {
+    height: 150px;
+    margin: 1rem;
+  }
+}
+@media (min-width: 760px) {
+  form {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto auto auto;
+    gap: 0.5rem;
+  }
+  label{
+    text-align: right;
+  }
+  input[type="submit"] {
+    width: 20%;
+  }
